# parapoint

./: .coverage  .gitignore  README.md  pyproject.toml
algos/: IDW.py  __init__.py  simple_average.py  spatial_grid_index.py
parapoint/: __init__.py
tests/: test_IDW.py  test_simple_average.py  test_spatial_grid_index.py
